// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance assets should be correct balance config 1`] = `
Object {
  "function": "account",
  "getParams": [Function],
  "pallet": "assets",
  "path": Array [
    "balance",
  ],
}
`;

exports[`Balance assets should get correct params 1`] = `
Array [
  1,
  "<ACCOUNT>",
]
`;

exports[`Balance min should be correct min config 1`] = `
Object {
  "function": "asset",
  "getParams": [Function],
  "pallet": "assets",
  "path": Array [
    "minBalance",
  ],
}
`;

exports[`Balance min should get correct params 1`] = `
Array [
  1,
]
`;

exports[`Balance system should be correct system config 1`] = `
Object {
  "calc": [Function],
  "function": "account",
  "getParams": [Function],
  "pallet": "system",
  "path": Array [
    "data",
  ],
}
`;

exports[`Balance system should get correct params 1`] = `
Array [
  "<ACCOUNT>",
]
`;

exports[`Balance tokens should be correct balance config 1`] = `
Object {
  "calc": [Function],
  "function": "accounts",
  "getParams": [Function],
  "pallet": "tokens",
}
`;

exports[`Balance tokens should be correct params with ForeignAsset 1`] = `
Array [
  "<ACCOUNT>",
  Object {
    "ForeignAsset": 5,
  },
]
`;

exports[`Balance tokens should be correct params with Token 1`] = `
Array [
  "<ACCOUNT>",
  Object {
    "Token": "MOVR",
  },
]
`;
